objects/CSM_SNow_Initiator_wwid__mdt.object
<CustomObject>
    <fields>
        <fullName>Initiator_wwid__c</fullName>
        <label>Initiator wwid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNOW_Assignment_Group__c</fullName>
        <label>SNOW Assignment Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Origin__c</fullName>
        <label>Service Request Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SNow Setting</label>
    <pluralLabel>SNow Settings</pluralLabel>
</CustomObject>